--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -15,6 +15,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install Dependencies
-        run: npm run ci
+        run: npm ci
       - name: Build Project
         run: npm run build
