--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Build Project
-        run: npm run build
+        run: npm build
