--- a/.github/workflows/use-reuseble-file.yml
+++ b/.github/workflows/use-reuseble-file.yml
@@ -1,5 +1,4 @@
-
-name: Website Deployment
+name: Using Reuseble Workflow
 on:
   push:
     branches:
@@ -69,16 +68,8 @@ jobs:
           path: dist
   deploy:
     needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get build artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: dist-files
-      - name: Output contents
-        run: ls
-      - name: Deploy
-        run: echo "Deploying..."
+    # This job reuses another workflow defined in the file at the specified path
+    uses: ./.github/workflows/reuseble.yml
   report:
     needs: [lint, deploy]
     if: failure()
