--- a/.github/workflows/use-reuseble-file.yml
+++ b/.github/workflows/use-reuseble-file.yml
@@ -72,6 +72,12 @@ jobs:
     with:
       # Passing the input to the reusable workflow
       artifacts-name: 'dist-files'  
+  print-deploy-result:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print deploy outputs
+        run: echo "${{ needs.deploy.outputs.result }}"
   report:
     needs: [lint, deploy]
     if: failure()
